swagger apis for nvipani
